--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass": "^1.89.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
