--- a/packages/sui-docs/package.json
+++ b/packages/sui-docs/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "seona-ui-monorepo",
+  "name": "@seona/sui-docs",
+  "version": "1.0.0",
+  "description": "Seona UI Documentation Site",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
-    "dev:docs": "cd packages/sui-docs && npm run dev",
-    "build:core": "cd packages/sui-core && npm run build",
-    "build:docs": "cd packages/sui-docs && npm run build",
-    "lint": "npm run lint --workspaces",
-    "test": "npm run test --workspaces",
-    "clean": "npm run clean --workspaces",
-    "publish:core": "cd packages/sui-core && npm publish"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
+    "@seona/sui-core": "file:../sui-core",
     "pretendard": "^1.3.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -36,4 +32,4 @@
     "vite": "^7.0.0",
     "vite-plugin-svgr": "^4.3.0"
   }
-}
+} 
